<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_3"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ill_logo" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontWeight="500"
        android:text="@string/sign_title"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <!--    add border radius to text input-->
    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailInput"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginTop="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_add" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    update text gradient color to sign-up -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="106dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:fontWeight="400"
        android:text="@string/forget_pw"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/custom_btn_unactive"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/su_create_acc"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_btn" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginTop="21dp"
        android:background="@color/dark_3"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="636dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/signIn_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>