<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_2"
    tools:context=".ConfirmProfilingActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toStartOf="@+id/confirm_title"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontWeight="600"
        android:text="@string/confirm_title"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_title"
        app:srcCompat="@drawable/photo_profile" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:fontWeight="600"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontWeight="600"
        android:text="Arya Wijaya"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginTop="101dp"
        android:background="@drawable/custom_main_button"
        android:paddingLeft="40dp"
        android:paddingTop="19dp"
        android:text="@string/create_acc"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

</androidx.constraintlayout.widget.ConstraintLayout>