<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_2"
            tools:context=".SignUpActivity">

            <ImageButton
                android:id="@+id/su_backBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="68dp"
                android:background="@color/dark_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontWeight="600"
                android:gravity="center"
                android:text="@string/su_title"
                android:textColor="@color/white"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/ill_photo" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="-10dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_add" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/su_text_input_username"
                android:layout_width="327dp"
                android:layout_height="50dp"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_username_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/su_text_input_email"
                android:layout_width="327dp"
                android:layout_height="50dp"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/su_text_input_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_email_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_add"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/su_text_input_password"
                android:layout_width="327dp"
                android:layout_height="50dp"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/su_text_input_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_passw_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/su_text_input_conpassw"
                android:layout_width="327dp"
                android:layout_height="50dp"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/su_text_input_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_confirm_passw_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pw"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUp_btn"
                android:layout_width="255dp"
                android:layout_height="60dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/custom_btn_unactive"
                android:text="Login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/su_text_input_conpassw" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</RelativeLayout>